--- a/Projects/xxdCmdb/web/templates/layout/_layread.html
+++ b/Projects/xxdCmdb/web/templates/layout/_layread.html
@@ -33,9 +33,9 @@
             <i class="fa fa-th-list" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
             <span>项目列表</span>
         </a>
-        <a id="menu_online" class="menu-item" href="/release">
+        <a id="menu_online" class="menu-item" href="/release.html">
             <i class="fa fa-cloud-upload" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
-            <span>项目上线</span>
+            <span>上线记录</span>
         </a>
         <a id="menu_search" class="menu-item" href="/authorizer.html">
             <i class="fa fa-television" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
