--- a/Projects/xxdCmdb/web/templates/release.html
+++ b/Projects/xxdCmdb/web/templates/release.html
@@ -1,57 +1,136 @@
 {% extends 'layout/_layread.html' %}
 
 {% block css %}
-    <link rel="stylesheet" href="/static/css/bootstrap-select.css">
-    <style>
-        .bootstrap-select:not([class*="col-"]):not([class*="form-control"]):not(.input-group-btn) {
-            width: 598px;
-            border-radius: 1px; !important;
-        }
-    </style>
+
+
 {% endblock %}
 
 {% block conent %}
+    <ol class="breadcrumb" style="margin-bottom: 0;">
+        <li><a href="/cmdb.html">首页</a></li>
+        <li class="active">资产管理</li>
+    </ol>
     <div style="padding: 5px 8px;">
 
-    <h3 style="display: inline-block">{{ data.project_name }} - {{ data.business_1 }} - {{ data.business_2 }} - {{ data.release_id }}</h3>
-        <a id="obj_commit" class="btn btn-primary no-radius" style="width: 100px;margin-top: -8px;margin-left: 50px;font-size: 15px;background: rgb(92,184,92)">
-            发布
-        </a>
-        <a id="obj_commit" class="btn btn-primary no-radius" style="width: 100px;margin-top: -8px;margin-left: 50px;font-size: 15px;">
-            返回
-        </a>
-        <br>
-        <div style="margin-top: 20px ;t-webkit-column-count:6;-moz-column-count:6;column-count:6;
-                                                        -webkit-column-gap:20px;-moz-column-gap:20px;column-gap:20px;">
-            <span style="display:block;text-align:left;">克隆代码</span>
-            <span style="display:block;text-align:center;">mvn打包</span>
-            <span style="display:block;text-align:center;">war包校验</span>
-            <span style="display:block;text-align:center;">更新服务器</span>
-            <span style="display:block;text-align:center;">重启关键服务</span>
-            <span style="display:block;text-align:right;">最后数据检查</span>
+        <div class="list-block">
+            <div class="clearfix search-area">
+
+                <div class="col-md-offset-10 do-submit">
+                    <a id="search_condition_submit" class="btn btn-primary no-radius">
+                        <i class="fa fa-search"></i> 搜索
+                    </a>
+                </div>
+
+                <div id="search_conditions" class="col-md-offset-2 col-md-8">
+                    <div class="condition">
+                        <div class="icons">
+                            <a class="btn btn-default no-radius" onclick="$.AddSearchCondition(this)"><i
+                                    class="fa fa-plus-square"></i></a>
+                        </div>
+                        <div class="inputs">
+                            <div class="input-group">
+                                <div id="search_condition" init="false" class="input-group-btn">
+                                    <label type="button" class="btn btn-default no-radius" style="width: 100px;">&nbsp;</label>
+                                    <button type="button" class="btn btn-default dropdown-toggle no-border-r" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></button>
+                                    <ul class="change-search-condition dropdown-menu">
+
+                                    </ul>
+                                </div>
+
+
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+{#            <div class="clearfix function-area">#}
+{#                <div class="btn-group btn-group-sm custom-btn-group">#}
+{#                    <a id="check_all" class="btn btn-default no-radius"><i#}
+{#                            class="fa fa-check-square"></i> 全选</a>#}
+{#                    <a id="check_cancel" class="btn btn-default no-radius"><i class="fa fa-minus-square-o"></i> 取消</a>#}
+{#                    <a id="check_reverse" class="btn btn-default no-radius"><i#}
+{#                            class="fa fa-check-square-o"></i> 反选</a>#}
+{#                    <a class="btn btn-default no-radius" href="/add-asset.html"><i class="fa fa-plus-circle"></i>添加</a>#}
+{#                    <a id="do_delete" class="btn btn-default no-radius"><i class="fa fa-trash"></i> 删除</a>#}
+{#                    <a id="edit_mode_target" class="btn btn-default no-radius"><i class="fa fa-pencil-square-o"></i>#}
+{#                        <span>进入编辑模式</span></a>#}
+{#                    <a id="do_save" class="btn btn-default no-radius"><i class="fa fa-floppy-o"></i> 保存</a>#}
+{#                    <a id="do_refresh" class="btn btn-default no-radius"><i class="fa fa-refresh"></i> 刷新</a>#}
+{#                    <a id="handle_status" class="btn no-radius" tabindex="0" role="button" data-toggle="manual"#}
+{#                       data-trigger="focus" data-container="body" data-html="true" data-placement="bottom" title="错误详细"#}
+{#                       data-content=""></a>#}
+{#                </div>#}
+{#            </div>#}
+
+            <div class="table-responsive table-area">
+                <table class="table table-striped table-bordered">
+                    <!-- 表格标题开始 -->
+                    <thead id="table_head">
+                    <tr>
+
+                    </tr>
+                    </thead>
+                    <!-- 表格标题结束 -->
+
+                    <!-- 表格内容开始 -->
+                    <tbody id="table_body" edit-mode='false'>
+
+                    </tbody>
+                    <!-- 表格内容结束 -->
+
+                </table>
+                <div class="clearfix">
+                    <div class="right">
+                        <ul id="pager" class="pagination pagination-sm no-margin">
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
 
-        <span></span>
-        <div class="progress progress-striped" style="margin-bottom: 0px";>
-        <div class="progress-bar progress-bar-success"  role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width:100%">100%</div>
-        </div>
-
-        <div style="height: 600px;border: green solid 1px; margin-top: 20px">
-
-        </div>
     </div>
+
+    <!-- 删除层开始 -->
+    <div id="modal_delete" class="alert alert-danger alert-dismissible fade in modal-delete hide" role="alert">
+        <button type="button" class="close" aria-label="Close" onclick="$.Hide('#shade,#modal_delete');"><span>×</span>
+        </button>
+        <h4>确定删除资产？</h4>
+
+        <p>与该资产相关联数据将全部被删除！<br/> &nbsp;</p>
+
+        <p style="text-align: right">
+            <button type="button" class="btn btn-danger" id="do_delete_confirm">确定删除</button>
+            <button type="button" class="btn btn-default" onclick="$.Hide('#shade,#modal_delete');">取消</button>
+        </p>
+    </div>
+    <!-- 删除层结束 -->
+
+    <!-- 遮罩层开始 -->
+    <div id='shade' class='shade hide'></div>
+    <!-- 遮罩层结束 -->
+
+    <!-- 加载层开始 -->
+    <div id='loading' class='loading hide'></div>
+    <!-- 加载层结束 -->
+
 {% endblock %}
 
 {% block js %}
     <script type="text/javascript" src="/static/js/jquery.cookie.js"></script>
     <script type="text/javascript" src="/static/plugins/bootstrap/js/bootstrap.js"></script>
     <script type="text/javascript" src="/static/js/nb-list.js"></script>
-    <script src="/static/js/bootstrap-select.js"></script>
-
 
     <script>
         $(function () {
             $.initMenu('#menu_online');
-        }
+            $.nbDataList('/releases.html', '1');
+        });
+
+        function ChangePage(id) {
+                $.nbDataList('/assets.html', id);
+            }
     </script>
 {% endblock %}
