0524 add release done1

--- a/Projects/xxdCmdb/web/templates/index.html
+++ b/Projects/xxdCmdb/web/templates/index.html
@@ -28,7 +28,7 @@
             <div class="info-box task-bg">
                 <i class="fa fa-tasks"></i>
 
-                <a class="count" href="/task.html">装机</a>
+                <a class="count" href="/task_virtual.html">装机</a>
                 <div class="title">Task</div>
             </div>
         </div>
@@ -43,9 +43,17 @@
         </div>
 
         <div class="col-lg-3 col-sm-4 col-xs-6">
+            <div class="info-box dns-bg">
+                <i class="fa fa-user-o"></i>
+                <a class="count" href="/user.html">用户管理</a>
+                <div class="title">User Manage</div>
+            </div>
+        </div>
+
+        <div class="col-lg-3 col-sm-4 col-xs-6">
             <div class="info-box flow-bg">
                 <i class="fa fa-recycle"></i>
-                <a class="count" href="#">发布</a>
+                <a class="count" href="/project_list.html">发布</a>
 
                 <div class="title">publisher</div>
             </div>
