--- a/Projects/xxdCmdb/web/templates/layout/_laybusiness.html
+++ b/Projects/xxdCmdb/web/templates/layout/_laybusiness.html
@@ -33,6 +33,18 @@
             <i class="fa fa-users" aria-hidden="true" style="width: 14px; margin-left: 3px"></i>
             <span>群组管理</span>
         </a>
+        <a id="menu_create" class="menu-item" href="/_project.html">
+            <i class="fa fa-gitlab" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
+            <span>项目创建</span>
+        </a>
+        <a id="menu_list" class="menu-item" href="/project_list.html">
+            <i class="fa fa-th-list" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
+            <span>项目列表</span>
+        </a>
+        <a id="menu_online" class="menu-item" href="/release.html">
+            <i class="fa fa-cloud-upload" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
+            <span>上线记录</span>
+        </a>
         <a class="menu-item" href="/read.html">
             <i class="fa fa-map-o" aria-hidden="true"></i>
             <span>资产查询</span>
@@ -56,6 +68,7 @@
             <span>业务线三</span>
         </a>
         </div>
+
         <ul class="tree" style="margin-left: -25px">
 
 
