--- a/Projects/xxdCmdb/web/templates/project_list_r.html
+++ b/Projects/xxdCmdb/web/templates/project_list_r.html
@@ -1,4 +1,4 @@
-{% extends 'layout/_laybusiness.html' %}
+{% extends 'layout/_layread.html' %}
 
 {% block css %}
     <link rel="stylesheet" href="/static/css/bootstrap-select.css">
