--- a/Projects/xxdCmdb/web/templates/release_r.html
+++ b/Projects/xxdCmdb/web/templates/release_r.html
@@ -1,4 +1,4 @@
-{% extends 'layout/_laybusiness.html' %}
+{% extends 'layout/_layread.html' %}
 
 {% block css %}
 
@@ -126,7 +126,7 @@
     <script>
         $(function () {
             $.initMenu('#menu_online');
-            $.nbDataList('/releases.html', '1');
+            $.nbDataList('/releases_r.html', '1');
         });
 
         function ChangePage(id) {
