--- a/Projects/xxdCmdb/web/templates/layout/_layread.html
+++ b/Projects/xxdCmdb/web/templates/layout/_layread.html
@@ -25,19 +25,15 @@
             <i class="fa fa-user-o" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
             <span>权限查询</span>
         </a>
-        <a id="menu_create" class="menu-item" href="/_project.html">
-            <i class="fa fa-gitlab" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
-            <span>项目创建</span>
-        </a>
-        <a id="menu_list" class="menu-item" href="/project_list.html">
+        <a id="menu_list" class="menu-item" href="/project_list_r.html">
             <i class="fa fa-th-list" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
-            <span>项目列表</span>
+            <span>发布列表</span>
         </a>
-        <a id="menu_online" class="menu-item" href="/release.html">
+        <a id="menu_online" class="menu-item" href="/release_r.html">
             <i class="fa fa-cloud-upload" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
-            <span>上线记录</span>
+            <span>发布记录</span>
         </a>
-        <a id="menu_search" class="menu-item" href="/authorizer.html">
+        <a id="menu_search" class="menu-item" href="#">
             <i class="fa fa-television" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
             <span>上线日志</span>
         </a>
