--- a/Projects/xxdCmdb/web/templates/asset_list.html
+++ b/Projects/xxdCmdb/web/templates/asset_list.html
@@ -67,6 +67,7 @@
 
             <div class="table-responsive table-area">
                 <table class="table table-striped table-bordered">
+
                     <!-- 表格标题开始 -->
                     <thead id="table_head">
                     <tr>
@@ -130,7 +131,7 @@
         });
 
         function ChangePage(id) {
-                $.nbDataList('/assets.html', id);
+                $.nbDataLists(id);
             }
     </script>
 {% endblock %}
